Add GitHub Pages deployment settings

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "marble-tile-factory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://erlan2332.github.io/stone-craft",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
